# hy-home.k8s

./: .cursorrules  .cz.toml  .env.example  .eslintignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .gitmessage.json  .graphifyignore  .hadolint.yaml  .kube-linter.yaml  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .yamllint  .zizmor.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATING.md  CONTRIBUTING.md  GEMINI.md  LICENSE  OPERATIONS.md  README.md  RTK.md  cliff.toml  gitignore_diff.txt  kind-config.yaml  llms.txt  renovate.json  staged_files.txt  staged_status.txt
.agent/: README.md  config.yml
.agents/: GEMINI.md  hooks.json
.claude/: CLAUDE.md  GEMINI.md  README.md  agent-instructions.md  governance.md  lifecycle.md  repo-navigation.md  settings.json
.codex/: CODEX.md  hooks.json
.githooks/: pre-commit  pre-commit.cmd  pre-commit.ps1
.github/: ABOUT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GITHUB_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  copilot-additional.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
_workspace/: README.md
apps/: README.md  placeholder.yaml
apps/_examples/demo-backend/app/: Dockerfile  main.py  pyproject.toml
bootstrap/: README.md  argocd-install.sh  cluster-setup.sh  dev-tools.ps1  dev-tools.sh  root-apps.sh
cluster-config/: external-services.yaml  metallb-config.yaml
docs/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  (+3 more)
(+1768 files in other folders)
